Lab-Cycle-2/mongo-db.txt
# 1.Create Database
use emp

#2. Create a collection
db.lab.insertOne( {x:1} );

#3. Drop Collection
db.lab.drop()

#4. Insert Document in Selected Collection
db.myCollection.insertOne( { x: 1 } );

#5. Select the list document in Collection
db.myCollection.find();

#6. Update in Collection
db.myCollection.updateOne({x:1},{$set:{x:2}})

#7. function deprecated

#8. Delete in collection
db.myCollection.deleteOne( { x: 2 } )

#9. Projection Using Find
db.myCollection.find();

#10. Drop Database
db.dropDatabase();


emp> db.lab.drop()
true
emp> db.myCollection.insertOne( { x: 1 } );
{
  acknowledged: true,
  insertedId: ObjectId("639c1215017d4c53551a8b37")
}
emp> db.myCollection.insertOne( { y: 2 } );
{
  acknowledged: true,
  insertedId: ObjectId("639c121e017d4c53551a8b38")
}
emp> db.myCollection.find();
[
  { _id: ObjectId("639c0fc4017d4c53551a8b36"), x: 1 },
  { _id: ObjectId("639c1215017d4c53551a8b37"), x: 1 },
  { _id: ObjectId("639c121e017d4c53551a8b38"), y: 2 }
]
emp> db.myCollection.listCollections();
TypeError: db.myCollection.listCollections is not a function
emp> db.myCollection.find();
[
  { _id: ObjectId("639c0fc4017d4c53551a8b36"), x: 1 },
  { _id: ObjectId("639c1215017d4c53551a8b37"), x: 1 },
  { _id: ObjectId("639c121e017d4c53551a8b38"), y: 2 }
]
emp> db.collection.find( { x:1 )
Uncaught:
SyntaxError: Unexpected token, expected "," (1:26)

> 1 | db.collection.find( { x:1 )
    |                           ^
  2 |

emp> db.collection.find( { x:1 } )

emp> db.myCollection.update({'x':1},{$set:{'x':5}})
DeprecationWarning: Collection.update() is deprecated. Use updateOne, updateMany, or bulkWrite.
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
emp> db.collection.find();

emp> db.myCollection.find();
[
  { _id: ObjectId("639c0fc4017d4c53551a8b36"), x: 5 },
  { _id: ObjectId("639c1215017d4c53551a8b37"), x: 1 },
  { _id: ObjectId("639c121e017d4c53551a8b38"), y: 2 }
]
emp> db.myCollection.save({"_id":ObjectId("639c0fc4017d4c53551a8b36"),"name":"hakkeem"})
TypeError: db.myCollection.save is not a function
emp> db.myCollection.deleteOne( { "x": 5 } )
{ acknowledged: true, deletedCount: 1 }
emp> db.myCollection.find();
[
  { _id: ObjectId("639c1215017d4c53551a8b37"), x: 1 },
  { _id: ObjectId("639c121e017d4c53551a8b38"), y: 2 }
]
emp> db.dropDatabase();
